--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "my-next-app-ts",
+  "name": "nextjs-publicruntimeconfig-client-transitions",
   "version": "0.1.0",
   "private": true,
   "scripts": {
